Fix spacing for the implemented screens list

--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -2682,6 +2682,7 @@ main {
   }
 }
 .screens-list {
+  padding-bottom: 80px;
   li {
     position: relative;
     &:hover {
